--- a/saper/saper.css
+++ b/saper/saper.css
@@ -1,82 +1,58 @@
-div
-{
+div {
     display: flex;
-    
     font-family: Courier, monospace;
     text-align: center;
-    
     background-color: #888888;
 }
 
-div#game
-{
+#game {
     flex-direction: column;
-    
     width: 400px;
     height: 470px;
 }
 
-div#panel
-{
+#panel {
     flex-direction: row;
-    
     padding: 2% 2% 2% 2%;
-    
     height: 15%;
     border: 5px ridge black;
 }
 
-div#board
-{
+#board {
     flex-direction: column;
-    
     height: 85%;
     border: 5px ridge black;
 }
 
-div.row
-{
+.row {
     flex-direction: row;
-    
     height: 6.25%;
 }
 
-div.field
-{
+.field {
     cursor: pointer;
-    
     font-size: 15px;
     color: blue;
-    
     width: 6.25%;
     border: 3px outset black;
-    
     background-color: #BBBBBB;
 }
 
-div.face
-{
+.face {
     flex-grow: 1;
     cursor: pointer;
-    
     border: 3px outset white;
     width: 12%;
-    
     background-image: url("epicface.jpg");
     background-size: 100% 100%;
-    
     margin-left: 15%;
     margin-right: 15%;
 }
 
-div.counter
-{
+.counter {
     flex-grow: 3;
     cursor: pointer;
-    
     font-size: 36px;
-    
     background-color: black;
     color: red;
 }
-
